src/objects/Treatment__c.object
<CustomObject>
    <fields>
        <fullName>Record_Valid__c</fullName>
        <description>Returns empty text if the record is valid, otherwise returns text indicating the problem</description>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, &quot;&quot;,

IF(ISBLANK(TEXT( X15_Source_of_referral__c )), &quot;Q15a source of referral Incomplete&quot;, 

IF(AND(TEXT( X15b_If_client_referred__c ) &lt;&gt; &quot;8. Other (specify)&quot;, NOT(ISBLANK( X15b8_Other_specify__c ))), &quot;Q15b8 Other specify not required&quot;,

IF(AND(OR(TEXT( X15_Source_of_referral__c ) = &quot;4. Other drug treatment centre&quot;, TEXT( X15_Source_of_referral__c ) = &quot;5. General practitioner&quot;, TEXT( X15_Source_of_referral__c ) = &quot;6. Acute hospital service excluding A&amp;E&quot;, TEXT( X15_Source_of_referral__c ) = &quot;13. Prison&quot;, TEXT( X15_Source_of_referral__c ) = &quot;15. Mental health liaison nurse at A&amp;E&quot;, TEXT( X15_Source_of_referral__c ) = &quot;17. Mental health facility (including psychiatrist)&quot;), ISBLANK(TEXT(X15b_If_client_referred__c))), &quot;Q15b Incomplete&quot;,

IF(OR(TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;, 

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

IF(AND(TEXT(X17b_Assessment_criterion_fulfilled__c ) = &quot;3. Pending&quot;, NOT(ISBLANK( X37_Date_of_Final_Discharge__c ))), &quot;Q17 Criterion Fulfilled Incomplete&quot;, 

IF(AND(TEXT(X17b_Assessment_criterion_fulfilled__c ) &lt;&gt; &quot;1.Yes&quot;, NOT(ISBLANK(X17c_Date_assessment_criteria_fulfilled__c ))), &quot;Q17b Criterion Fulfilled Invalid&quot;, 

IF( X21a_Date_This_treatment_started__c &lt; X16_Date_of_Assessment__c , &quot;Q21a Invalid can&apos;t be before Q16 Date of Assessment&quot;, 

IF( AND(OR(TEXT( X22_Ever_previously_treated_re_drug__c ) = &quot;1. Never treated&quot;, TEXT(X22_Ever_previously_treated_alc_drug__c ) = &quot;1. Never treated&quot;), TEXT(X23_Type_of_contact_with_this_centre__c) &lt;&gt; &quot;1. First treatment&quot;), &quot;Q20 Times started this year Invalid&quot;, 

IF(ISBLANK( X24b_Specify_first_drug_used__c ), &quot;Q24 Incomplete&quot;, 

IF(OR(X28f_How_many_drinks_per_occasion__c &gt; 0 &amp;&amp; X28g_Number_of_days_alcohol_consumed__c = 0, 
X28f_How_many_drinks_per_occasion__c = 0 &amp;&amp; X28g_Number_of_days_alcohol_consumed__c &gt; 0), &quot;Q28f-Q28g Invalid&quot;, 

IF(AND(TEXT( X29b_Ever_injected__c) = &quot;2. No&quot;, TEXT(X30_Ever_shared_any_injecting_equipment__c) &lt;&gt; &quot;8. Not applicable&quot;), &quot;Q29a-Q30 Invalid&quot;, 

IF(ISBLANK( TEXT(X33a_Main_Intervention__c )), &quot;Q33a Invalid Main Intervention&quot;, 

IF( AND(X29c_Age_first_injected__c &lt;&gt; 88, X29c_Age_first_injected__c &gt; Age__c ), &quot;Q29c Age first injected Invalid&quot;, 

&quot;&quot;) ) ) ) ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHARED__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

CASE( X30_Ever_shared_any_injecting_equipment__c ,
&quot;1. Yes&quot;,&quot;1&quot;,
&quot;2. No&quot;,&quot;2&quot;,
&quot;8. Not applicable&quot;,&quot;8&quot;,
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;))</formula>
        <label>SHARED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIFYID__c</fullName>
        <label>SPECIFYID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIFYX__c</fullName>
        <label>SPECIFYX</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIFY__c</fullName>
        <formula>if(X14_Main_Reason_for_Referral_Drug__r.DrugCode__c  &lt;&gt; &quot;&quot;,  X14_Main_Reason_for_Referral_Drug__r.DrugCode__c , &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPECIFY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;),

&quot;&quot;, 

CASE( X18a_Clients_treatment_status__c,
&quot;1. Offered treatment&quot;, &quot;1&quot;,
&quot;2. Placed on waiting list for opiate substitute&quot;,&quot;2&quot;,
&quot;6. Placed on other drug treatment waiting list&quot;,&quot;6&quot;,
&quot;4. Psychiatric assessment only&quot;,&quot;4&quot;,
&quot;3. Transferred to another site&quot;,&quot;3&quot;,
&quot;&quot;))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBDRUGSPECIFY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SUBDRUGSPECIFY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBDRUG__c</fullName>
        <formula>IF(ISBLANK( X33b10_Date_Commenced__c ),&quot;FALSE&quot;,&quot;TRUE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUBDRUG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScreenBy__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

Case(X42b_If_screening_ordered_by__c, 
&quot;1. Treatment Provider&quot;,&quot;1&quot;, 
&quot;2. Court&quot;, &quot;2&quot;,
&quot;&quot;) )</formula>
        <label>ScreenBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

Case( X42a_Urine_screeding_during_treatment__c , 
&quot;1. Yes&quot;,&quot;1&quot;, 
&quot;2. No&quot;,&quot;2&quot;, 
&quot;&quot;) )</formula>
        <label>Screen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c  = &quot;994&quot;, 

&quot;&quot;, 

Case(X15_Source_of_referral__c, 
&quot;1. Self&quot;,&quot;1&quot;, 
&quot;2. Family&quot;,&quot;2&quot;, 
&quot;3. Friends&quot;,&quot;3&quot;, 
&quot;4. Other drug treatment centre&quot;,&quot;4&quot;, 
&quot;5. General practitioner&quot;,&quot;5&quot;, 
&quot;6. Acute hospital service excluding A&amp;E&quot;,&quot;6&quot;, 
&quot;7. Social services/Community services&quot;,&quot;7&quot;, 
&quot;8. Court/probation/police&quot;,&quot;8&quot;, 
&quot;10. Outreach worker&quot;,&quot;10&quot;, 
&quot;11. Mobile bus&quot;,&quot;11&quot;,
&quot;12. School&quot;,&quot;12&quot;, 
&quot;13. Prison&quot;,&quot;13&quot;, 
&quot;14. Employer&quot;,&quot;14&quot;,
&quot;15. Mental health liaison nurse at A&amp;E&quot;,&quot;15&quot;, 
&quot;16. Accident &amp; emergency other&quot;,&quot;16&quot;, 
&quot;17. Mental health facility (including psychiatrist)&quot;,&quot;17&quot;, 
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;&quot;))</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_for_HRB_Report__c</fullName>
        <formula>IF(

ISBLANK( X14_Main_Reason_for_Referral_Drug__c ), &quot;Q14 No Main Reason for Referral - Drug&quot;,

IF(X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, &quot;Concerned Person&quot;,

IF(ISBLANK(TEXT(X17a_Assessment_outcome__c)), &quot;Q17a Assessment Outcome Incomplete&quot;,

IF(TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, &quot;Q17a Unsuitable for treatment&quot;,

IF(TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, &quot;Q17b No criterion fulfilled&quot;,

IF(ISBLANK( TEXT(X18a_Clients_treatment_status__c )), &quot;Q18a Client&apos;s Treatment Status Incomplete&quot;,

IF(TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, &quot;Q18a Client Transferred to another site&quot;,

IF(TEXT( X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;, &quot;Q18a Psychiatric assessment only&quot;,

IF(AND(TEXT(X18a_Clients_treatment_status__c ) = &quot;2. Placed on waiting list for opiate substitute&quot;,
TEXT(X18b_Reason_removed_from_waiting_list__c ) &lt;&gt; &quot;1. Treatment offered with this centre&quot;), &quot;Q18b No additional information required&quot;,

IF(AND(TEXT(X18a_Clients_treatment_status__c ) = &quot;6. Placed on other drug treatment waiting list&quot;,
TEXT(X18b_Reason_removed_from_waiting_list__c ) &lt;&gt; &quot;1. Treatment offered with this centre&quot;),&quot;Q18b No additional information required&quot;,

IF(ISBLANK(TEXT( X19_Accepted_place_at_this_centre__c )), &quot;Q19 Accepted Place Incomplete&quot;,

IF(TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;, &quot;Q19 Didn&apos;t accept place at this centre&quot;,

IF(ISBLANK(X21a_Date_This_treatment_started__c ), &quot;Q21a Invalid date this treatment started&quot;,

IF(AND(TEXT(X14_Main_Reason_for_referral__c ) = &quot;1. Alcohol&quot;,
X20_Number_times_started_this_year__c &lt; 1,
TEXT( X22_Ever_previously_treated_alc_drug__c ) = &quot;2. Previously treated&quot;), &quot;Invalid Q22&quot;,

IF(AND(TEXT(X14_Main_Reason_for_referral__c ) = &quot;3. Licit drug&quot;,
X20_Number_times_started_this_year__c &lt; 1,
TEXT(X22_Ever_previously_treated_re_drug__c) = &quot;2. Previously treated&quot;),&quot;Invalid Q22&quot;,

IF(AND(TEXT(X14_Main_Reason_for_referral__c ) = &quot;3. Licit drug&quot;,
X20_Number_times_started_this_year__c &lt; 1,
TEXT(X22_Ever_previously_treated_re_drug__c) = &quot;2. Previously treated&quot;), &quot;Invalid Q22&quot;,

IF(AND(NOT(ISBLANK( X20_Number_times_started_this_year__c )), ISBLANK( TEXT(X22_Ever_previously_treated_alc_drug__c ) ) ), &quot;Invalid Q22&quot;,

IF(AND(NOT(ISBLANK( X20_Number_times_started_this_year__c )), ISBLANK( TEXT(X22_Ever_previously_treated_re_drug__c ) ) ), &quot;Invalid Q22&quot;,

IF(ISBLANK( X24a_Age_first_use_any_drug__c ), &quot;Q24 Incomplete&quot;,

&quot;HRB OK&quot;) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status for HRB Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substance_use_Valid__c</fullName>
        <formula>IF(OR(X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 
TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, 
TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 
TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 
TEXT( X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;, 
TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 
&quot;HRB OK&quot;, 
IF(AND(NOT(ISBLANK( X25a_Main_substance__c )),ISBLANK( TEXT(X25b_Route_of_Admin_Main_sub__c ))), &quot;Invalid Q25b&quot;, 
IF(AND(NOT(ISBLANK( X25a_Main_substance__c )),ISBLANK( TEXT(X25c_Frequency_of_use_in_last_mth__c ))), &quot;Invalid Q25c&quot;, 
IF(AND(NOT(ISBLANK( X25a_Main_substance__c )),ISBLANK( X25d_Age_at_1st_use__c )), &quot;Invalid Q25d&quot;, 
IF(AND(NOT(ISBLANK( X26a_Substance_2__c )),ISBLANK( TEXT(X26b_Route_of_Admin_Sub2__c ))), &quot;Invalid Q26b&quot;, 
IF(AND(NOT(ISBLANK( X26a_Substance_2__c )),ISBLANK( TEXT(X26c_Frequency_of_use_in_last_mth__c ))), &quot;Invalid Q26c&quot;, 
IF(AND(NOT(ISBLANK( X26a_Substance_2__c )),ISBLANK( X26d_Age_of_1st_use__c )), &quot;Invalid Q26d&quot;, 
IF(AND(NOT(ISBLANK( X27a_Substance_3__c )),ISBLANK( TEXT(X27b_Route_of_Admin_Sub3__c ))), &quot;Invalid Q27b&quot;, 
IF(AND(NOT(ISBLANK( X27a_Substance_3__c )),ISBLANK( TEXT(X27c_Frequency_of_use_in_last_mth__c ))), &quot;Invalid Q27c&quot;, 
IF(AND(NOT(ISBLANK( X27a_Substance_3__c )),ISBLANK( X27d_Age_of_1st_use__c )), &quot;Invalid Q27d&quot;, 
IF(AND(NOT(ISBLANK( X28a_Substance_4__c )),ISBLANK( TEXT(X28b_Route_of_Admin_Sub4__c ))), &quot;Invalid Q28b&quot;, 
IF(AND(NOT(ISBLANK( X28a_Substance_4__c )),ISBLANK( TEXT(X28c_Frequency_of_use_in_last_mth__c ))), &quot;Invalid Q28c&quot;, 
IF(AND(NOT(ISBLANK( X28a_Substance_4__c )),ISBLANK( X28d_Age_of_1st_use__c )), &quot;Invalid Q28b&quot;, 
&quot;HRB OK&quot;)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substance use Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TREATCON__c</fullName>
        <formula>IF(  OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c)  = &quot;2. Unsuitable for treatment&quot;, 

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c )  = &quot;3. Transferred to another site.&quot;,

TEXT(  X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;,

TEXT(  X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),


 &quot;&quot;, 

Case( X23_Type_of_contact_with_this_centre__c ,
&quot;1. First treatment&quot;,&quot;1&quot;,
&quot;2. One or more treatment periods&quot;,&quot;2&quot;,
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;))</formula>
        <label>TREATCON</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Referral_Assessment_details__c</fullName>
        <formula>IF( ISBLANK( X14_Main_Reason_for_Referral_Drug__c ), &quot;Q14 No Main Reason for Referral - Drug&quot;, 

IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, &quot;HRB OK&quot;, 

IF(ISBLANK(TEXT( X15_Source_of_referral__c )), &quot;Q15a source of referral Incomplete&quot;, 

IF(AND(TEXT( X15b_If_client_referred__c ) &lt;&gt; &quot;8. Other (specify)&quot;, NOT(ISBLANK( X15b8_Other_specify__c ))), &quot;Q15b8 Other specify not required&quot;, 

IF(AND(OR(TEXT( X15_Source_of_referral__c ) = &quot;4. Other drug treatment centre&quot;, TEXT( X15_Source_of_referral__c ) = &quot;5. General practitioner&quot;, TEXT( X15_Source_of_referral__c ) = &quot;6. Acute hospital service excluding A&amp;E&quot;, TEXT( X15_Source_of_referral__c ) = &quot;13. Prison&quot;, TEXT( X15_Source_of_referral__c ) = &quot;15. Mental health liaison nurse at A&amp;E&quot;, TEXT( X15_Source_of_referral__c ) = &quot;17. Mental health facility (including psychiatrist)&quot;), ISBLANK(TEXT(X15b_If_client_referred__c))), &quot;Q15b Incomplete&quot;, 

IF( ISNULL( X16_Date_of_Assessment__c ),&quot;Q16 Invalid&quot;, 

IF( ISBLANK(TEXT( X17a_Assessment_outcome__c )), &quot;Q17A Invalid&quot;, 

IF(TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, &quot;HRB OK&quot;, 

IF( ISBLANK(TEXT( X17b_Assessment_criterion_fulfilled__c )), &quot;Q17B Invalid&quot;, 

IF(TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, &quot;HRB OK&quot;, 

IF(AND(TEXT(X17b_Assessment_criterion_fulfilled__c ) = &quot;3. Pending&quot;, NOT(ISBLANK( X37_Date_of_Final_Discharge__c ))), &quot;Q17 Criterion Fulfilled Incomplete&quot;, 

IF(AND(TEXT(X17b_Assessment_criterion_fulfilled__c ) &lt;&gt; &quot;1.Yes&quot;, NOT(ISBLANK(X17c_Date_assessment_criteria_fulfilled__c ))), &quot;Q17b Invalid&quot;, 

IF(AND(TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;1.Yes&quot;, ISNULL( X17c_Date_assessment_criteria_fulfilled__c )), &quot;Q17c Invalid&quot;, 

IF(AND(TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, ISBLANK(  X18a3_Specify_Transferred__c )), &quot;Q18a3 Incomplete&quot;, 

IF(AND(OR(TEXT( X18a_Clients_treatment_status__c ) = &quot;1. Offered treatment&quot;, TEXT( X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;, TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;),NOT(ISBLANK(TEXT(X18b_Reason_removed_from_waiting_list__c )))), &quot;Q18b Invalid&quot;, 

IF( ISBLANK( TEXT(X19_Accepted_place_at_this_centre__c )) , &quot;Q19 Invalid&quot;, 

IF(TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;, &quot;HRB OK&quot;, 

IF(ISBLANK( X24b_Specify_first_drug_used__c ), &quot;Q24 Incomplete&quot;, 

IF(OR(X28f_How_many_drinks_per_occasion__c &gt; 0 &amp;&amp; X28g_Number_of_days_alcohol_consumed__c = 0, 
X28f_How_many_drinks_per_occasion__c = 0 &amp;&amp; X28g_Number_of_days_alcohol_consumed__c &gt; 0), &quot;Q28f-Q28g Invalid&quot;, 

IF(AND(TEXT( X29b_Ever_injected__c) = &quot;2. No&quot;, TEXT(X30_Ever_shared_any_injecting_equipment__c) &lt;&gt; &quot;8. Not applicable&quot;), &quot;Q29a-Q30 Invalid&quot;, 

IF( AND(X29c_Age_first_injected__c &lt;&gt; 88, X29c_Age_first_injected__c &lt;&gt; 99, X29c_Age_first_injected__c &gt; Age__c ), &quot;Q29c Age first injected Invalid&quot;, 

&quot;HRB OK&quot;) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Referral/Assessment details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titre__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;, 

IF (TEXT( X40_Vaccination__c) = &quot;6. Adequate titre protective&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <label>Titre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransReasonSpecify__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot; ||  TEXT(X15b_If_client_referred__c)  &lt;&gt; &quot;8. Other (specify)&quot;,

 &quot;&quot;,

X15b8_Other_specify__c)</formula>
        <label>TransReasonSpecify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransReason__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

 &quot;&quot;,

CASE(  X15b_If_client_referred__c  ,

&quot;1. Client moved address&quot;,  &quot;1&quot;,
&quot;2. Clients management/security&quot;, &quot;2&quot;,
&quot;3. Dual diagnosis (psychiatric/substance use co-morbidity)&quot;, &quot;3&quot;,
&quot;4. Treatment for blood borne diseases&quot;, &quot;4&quot;,
&quot;5. Client unstable requires substitution treatment&quot;, &quot;5&quot;,
&quot;6. Other treatment required (excluding substitution)&quot;, &quot;6&quot;,
&quot;7. Client stable, transferred to satellite clinic or GP&quot;, &quot;7&quot;,
&quot;8. Other (specify)&quot;, &quot;8&quot;, 
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TransReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Type_Number__c</fullName>
        <formula>IF( AND(  X16_Date_of_Assessment__c   &gt;=   DATE(12,01,01), ISBLANK( X37_Date_of_Final_Discharge__c ) ),&quot;0&quot;, &quot;1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type 0 = Open Treatment
Type 1 = Completed Treatment</inlineHelpText>
        <label>Treatment Type Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Type__c</fullName>
        <formula>IF(AND( YEAR(  X16_Date_of_Assessment__c  ) =  YEAR( TODAY() ), ISBLANK( X37_Date_of_Final_Discharge__c ) ),&quot;New Treatment&quot;,

IF(AND( YEAR(  X16_Date_of_Assessment__c  ) =  YEAR( TODAY() ),   YEAR( X37_Date_of_Final_Discharge__c )  =  YEAR( TODAY() ) ), &quot;Completed Treatment&quot;,

&quot;Incomplete Treatment started last year&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treatment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqID__c</fullName>
        <formula>Centre_number__c  &amp; id__c &amp;   RIGHT(TEXT(YEAR( X13_Date_of_Referral__c )), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedBy__c</fullName>
        <formula>IF(  OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 

TEXT(X17a_Assessment_outcome__c)  = &quot;2. Unsuitable for treatment&quot;,

TEXT( X18a_Clients_treatment_status__c  ) =  &quot;3. Transferred to another site.&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;&quot;,

&quot; ecass01__Centre_number__c &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UpdatedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Date__c</fullName>
        <formula>DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <formula>DATEVALUE(IF(  OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 

TEXT(X17a_Assessment_outcome__c)  = &quot;2. Unsuitable for treatment&quot;,

TEXT( X18a_Clients_treatment_status__c  ) =  &quot;3. Transferred to another site.&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;&quot;, 

TEXT(  Updated_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vaccine1__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;FALSE&quot;,

IF(TEXT( X40_Vaccination__c ) = &quot;1. First dose&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vaccine1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vaccine2__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;, 

IF(TEXT( X40_Vaccination__c ) = &quot;2. Second dose&quot;, &quot;TRUE&quot;,&quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vaccine2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vaccine3__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;, 
 
IF(TEXT( X40_Vaccination__c ) = &quot;3. Third dose&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vaccine3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VaccineB4__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;, 

IF(TEXT( X40_Vaccination__c ) = &quot;4. Booster dose 1&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VaccineB4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VaccineB5__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;, 

IF(TEXT( X40_Vaccination__c ) = &quot;5. Booster dose 2&quot;, &quot;TRUE&quot;,&quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VaccineB5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaitCentre__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;),

&quot;&quot;, 

 TEXT(X18b4_Client_transferred_specify_centre__c ) )</formula>
        <label>WaitCentre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaitOther__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, 

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;), 

&quot;&quot;, 

X18b9_Other_specify__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WaitOther</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaitStatus__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;),

&quot;&quot;, 

CASE(  X18b_Reason_removed_from_waiting_list__c  ,

&quot;1. Treatment offered with this centre&quot;, &quot;1&quot;,
&quot;2. Client did not fulfil criteria to commence treatment&quot;, &quot;2&quot;,
&quot;3. Client did not accept methadone/other drug treatment&quot;, &quot;3&quot;,
&quot;4. Client transferred/commenced treatment with another centre&quot;, &quot;4&quot;,
&quot;5. Service unable to contact/locate client&quot;, &quot;5&quot;,
&quot;6. Client admitted to hospital&quot;, &quot;6&quot;,
&quot;7. Client sent to prison&quot;, &quot;7&quot;,
&quot;8. Client died&quot;, &quot;8&quot;,
&quot;9. Other (specify)&quot;, &quot;9&quot;,
&quot;&quot;))</formula>
        <label>WaitStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X13_Date_of_Referral__c</fullName>
        <label>13 Date of Referral</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X14_Main_Drug_Problem_Name__c</fullName>
        <formula>X14_Main_Reason_for_Referral_Drug__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>14 Main Drug Problem Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X14_Main_Reason_for_Referral_Drug__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>14 Main Reason for Referral - Drug</label>
        <referenceTo>Drug_HRB__c</referenceTo>
        <relationshipLabel>Treatments (14. Main Reason for Referral - Drug)</relationshipLabel>
        <relationshipName>Treatments5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X14_Main_Reason_for_referral__c</fullName>
        <description>Based on main problem drug
1. Alcohol.     2. Illicit drug.   
3. Licit drug.  4. Other problem</description>
        <inlineHelpText>Based on main problem drug
1. Alcohol.     2. Illicit drug.   
3. Licit drug.  4. Other problem</inlineHelpText>
        <label>14 Main Reason for referral</label>
        <picklist>
            <picklistValues>
                <fullName>1. Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Illicit drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Licit drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Other problem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X15_Source_of_referral__c</fullName>
        <inlineHelpText>If 4, 5, 6, 13, 15, 17, please complete Q15b</inlineHelpText>
        <label>15a Source of referral</label>
        <picklist>
            <picklistValues>
                <fullName>1. Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Other drug treatment centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. General practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Acute hospital service excluding A&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Social services/Community services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Court/probation/police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Outreach worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Mobile bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14. Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15. Mental health liaison nurse at A&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16. Accident &amp; emergency other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17. Mental health facility (including psychiatrist)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X15b8_Other_specify__c</fullName>
        <label>15b8 Other specify</label>
        <type>TextArea</type>
    </fields>
</CustomObject>